--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,7 @@
-PORT=<port>
+PORT=<one of ports>
+MONGODB_URI=<>
+SALT_ROUNDS=<a number>
+JWT_SECRET=<>
+NODE_ENV=development
+FRONTEND_ORIGIN=<hhttp>
+OPENAI_API_KEY=<>
