--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
-    "openai": "^6.22.0"
+    "multer": "^2.0.2",
+    "openai": "^6.22.0",
+    "resend": "^6.9.2"
   }
 }
